--- a/Cannabis/addons/zurna-fakat-70.css
+++ b/Cannabis/addons/zurna-fakat-70.css
@@ -5,7 +5,7 @@
 [data-user-id="627240487413088286"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="627240487413088286"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/u%C3%A7ak.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -17,7 +17,7 @@
 [data-user-id="590556811459952649"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="590556811459952649"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/gaynes.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -29,7 +29,7 @@
 [data-user-id="521337407061360645"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="521337407061360645"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/sap.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -41,7 +41,7 @@
 [data-user-id="707293248065896468"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="707293248065896468"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/bayrakl%C4%B1.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -53,7 +53,7 @@
 [data-user-id="949620098518364170"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="949620098518364170"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/hamsi.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
