--- a/Cannabis/addons/zurna-fakat-pembe.css
+++ b/Cannabis/addons/zurna-fakat-pembe.css
@@ -5,7 +5,7 @@
 [data-user-id="571737192032894987"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="571737192032894987"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/chard.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -17,7 +17,7 @@
 [data-user-id="237281326963621888"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="237281326963621888"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/morru.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -29,7 +29,7 @@
 [data-user-id="369183383097573376"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="369183383097573376"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/qeyriadi.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -41,7 +41,7 @@
 [data-user-id="380411952666640385"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="380411952666640385"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/elonmusk.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -53,7 +53,7 @@
 [data-user-id="549317659188133928"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="549317659188133928"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/g3.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -65,7 +65,7 @@
 [data-user-id="315413107151339520"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="315413107151339520"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/vidar.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -77,7 +77,7 @@
 [data-user-id="879770628104810548"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="879770628104810548"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/zzz.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -89,7 +89,7 @@
 [data-user-id="347061557471084544"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="347061557471084544"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/wtfmaan.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -101,7 +101,7 @@
 [data-user-id="925408410885840916"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="925408410885840916"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/eyl%C3%BCl.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -113,7 +113,7 @@
 [data-user-id="462200595353174026"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="462200595353174026"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/ilayda.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -125,7 +125,7 @@
 [data-user-id="950476904396365884"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="950476904396365884"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/emrecum.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -138,7 +138,7 @@
 [data-user-id="708072966264586241"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="708072966264586241"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/miray.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -151,7 +151,7 @@
 [data-user-id="950851762963742730"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="950851762963742730"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/bagetali.png") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
