--- a/Cannabis/icons/icontheme.css
+++ b/Cannabis/icons/icontheme.css
@@ -100,3 +100,15 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
   --danger-background-normal: transparent;
   --danger-background-hover: hsl(359,calc(var(--saturation-factor, 1)*82.6%),59.4%);
 }
+
+/* ╔════════════════════════════════════════════════════════════════════════════════════════════════════════[─]═[□]═[×]═╗ */
+/* ║ Discord Eklentisi                                                                                                  ║ */
+/* ╠══════════════════════════╦═════════════════════════════════════════════════════════════════════════════════════════╣ */
+/* ║ Tema :                   ║ Menü İkonları                                                                           ║ */
+/* ║ Yapımcı:                 ║ CorellanStoma#1996                                                                      ║ */                                                      ║ */
+/* ╠══════════════════════════╩═════════════════════════════════════════════════════════════════════════════════════════╣ */
+/* ║                                                                                                                    ║ */
+/* ║ Discord sağ tık menüsüne ikonlar eklemeye yarayan bir tema eklentisi.                                              ║ */
+/* ║ CorellanStoma#1996. tarafından oluşturulmuştur.                                                                    ║ */
+/* ║                                                                                                                    ║ */
+/* ╚════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝ */
