--- a/Cannabis/icons/settingsicons/settingsiconstheme.css
+++ b/Cannabis/icons/settingsicons/settingsiconstheme.css
@@ -29,7 +29,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 /* ║ Kopyalananlar            ║ İsteğe bağlı olarak aktif edebilir veya devre dışı bırakabilirsin.                      ║ */
 /* ╚══════════════════════════╩═════════════════════════════════════════════════════════════════════════════════════════╝ */
 
-@import url("https://pranchard.github.io/Cannabis/icons/settingsicons/src/source.css"); /* ⚠️ Do not touch! */
+@import url("https://pranchard.github.io/Cannabis/icons/settingsicons/src/source.css"); 
 
 /* ╔════════════════════════════════════════════════════════════════════════════════════════════════════════[─]═[□]═[×]═╗ */
 /* ║ Discord Eklentisi                                                                                                  ║ */
