--- a/Cannabis/icons/settingsicons/settingsiconstheme.css
+++ b/Cannabis/icons/settingsicons/settingsiconstheme.css
@@ -1,4 +1,3 @@
-58 lines (43 sloc)  6.69 KB
 /*                                                                                                                       
                                                                                                                       
         CCCCCCCCCCCCCHHHHHHHHH     HHHHHHHHH               AAA               RRRRRRRRRRRRRRRRR   DDDDDDDDDDDDD        
@@ -35,7 +34,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 /* ║ Discord Eklentisi                                                                                                  ║ */
 /* ╠══════════════════════════╦═════════════════════════════════════════════════════════════════════════════════════════╣ */
 /* ║ Tema :                   ║ Ayarlar İkonları                                                                        ║ */
-/* ║ Yapımcı:                 ║ CorellanStoma#1996                                                                      ║ */                                                      ║ */
+/* ║ Yapımcı:                 ║ CorellanStoma#1996                                                                      ║ */
 /* ╠══════════════════════════╩═════════════════════════════════════════════════════════════════════════════════════════╣ */
 /* ║                                                                                                                    ║ */
 /* ║ Discord ayarlar menüsüne ikonlar eklemeyi sağlayan bir eklenti.                                                    ║ */
