--- a/Cannabis/icons/settings-icons.css
+++ b/Cannabis/icons/settings-icons.css
@@ -38,7 +38,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 /* ║ Discord Eklentisi                                                                                                  ║ */
 /* ╠══════════════════════════╦═════════════════════════════════════════════════════════════════════════════════════════╣ */
 /* ║ Tema :                   ║ Ayarlar İkonları                                                                        ║ */
-/* ║ Yapımcı:                 ║ CorellanStoma#1996                                                                      ║ */                                                      ║ */
+/* ║ Yapımcı:                 ║ CorellanStoma#1996                                                                      ║ */
 /* ╠══════════════════════════╩═════════════════════════════════════════════════════════════════════════════════════════╣ */
 /* ║                                                                                                                    ║ */
 /* ║ Discord ayarlar menüsüne ikonlar eklemeyi sağlayan bir eklenti.                                                    ║ */
