--- a/Cannabis/icons/discord-icons.css
+++ b/Cannabis/icons/discord-icons.css
@@ -332,8 +332,8 @@
 
 /* Home/Discord Icon*/
 .tutorialContainer-1pL9QS .homeIcon-r0w4ny path {
-    d: path("M17.25 10.18V12.81C17.25 12.98 17.24 13.14 17.22 13.3C17.07 15.07 16.02 15.95 14.1 15.95H13.84C13.68 15.95 13.52 16.03 13.42 16.16L12.63 17.21C12.28 17.68 11.72 17.68 11.37 17.21L10.58 16.16C10.49 16.05 10.3 15.95 10.16 15.95H9.89999C7.79999 15.95 6.75 15.43 6.75 12.8V10.17C6.75 8.25004 7.63999 7.20002 9.39999 7.05002C9.55999 7.03002 9.72001 7.02002 9.89001 7.02002H14.09C16.2 7.04002 17.25 8.09002 17.25 10.18Z");
-     transform: scale(1.9) translate(-5px, -7px);
+    background-image: url('https://pranchard.github.io/Cannabis/logo/cannabis.svg');
+    background-repeat: no-repeat; background-position: center;
 }
 
 /* Remove the eyeball lol */
