--- a/Cannabis/theme/base/others.css
+++ b/Cannabis/theme/base/others.css
@@ -126,3 +126,8 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 .perk-19D_HN {
 	background-color: var(--background-secondary) !important;
 }
+
+.messagesPopoutWrap-3zryHW{
+  max-height: 88vh !important;
+  max-width: 50vw;
+}
