--- a/Cannabis/theme/popouts/user-popout.css
+++ b/Cannabis/theme/popouts/user-popout.css
@@ -205,3 +205,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
     padding: 0;
     margin: 0 5px 0 2px;
 }
+
+.root-8LYsGj.root-g14mjS .body-1Ukv50 .listRow-2nO1T6:hover {
+	background-color: var(--background-secondary-alt) !important;
+}
