--- a/Cannabis/theme/popouts/emoji-menu.css
+++ b/Cannabis/theme/popouts/emoji-menu.css
@@ -39,3 +39,11 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 }
 	background-color: var(--background-secondary-alt);
 }
+
+.videoGrid-1tZm-F {
+   background-color: #101014 !important;
+}
+
+.videoControls-353CsJ .toolbar-3_r2xA {
+   background-color: #17161B !important;
+}
