--- a/Cannabis/addons/zurna-fakat-pembe.css
+++ b/Cannabis/addons/zurna-fakat-pembe.css
@@ -40,6 +40,13 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
             margin-right: 5px;
 }
 
+[aria-label="Chard"].userPopout-2j1gM4 .headerTop-3GPUSF .headerText-1-WmDq .nameTag-H6kSJ0 .username-3JLfHz::before {
+	content: "";
+            background: url("https://pranchard.github.io/Cannabis/assets/chard.png") center/100% no-repeat;
+            padding: 1px 10px 0px 10px;
+            margin-right: 5px;
+}
+
 /* morru */
 
 [data-author-id='237281326963621888'] .header-2jRmjb .username-h_Y3Us::before,
