--- a/Cannabis/theme/base/title-bar.css
+++ b/Cannabis/theme/base/title-bar.css
@@ -30,6 +30,8 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 
 /* sol üstteki discord yazısı */
 
+/* sol üstteki discord yazısı */
+
 .wordmarkWindows-2dq6rw {
     opacity: 0;
 }
@@ -77,7 +79,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 .sidebar-1tnWFu::before {
     content: " ";
     position: fixed !important;
-    width: 260px;
+    width: 240px;
     height: 70px;
     top: -10px;
     border-radius: var(--radius-primary);
