--- a/Cannabis/addons/zurna-fakat-70.css
+++ b/Cannabis/addons/zurna-fakat-70.css
@@ -35,7 +35,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="627240487413088286"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="627240487413088286"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/u%C3%A7ak.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/u%C3%A7ak.svg") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
@@ -47,7 +47,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="590556811459952649"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="590556811459952649"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/gaynes.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/gaynes.svg") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
@@ -59,7 +59,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="521337407061360645"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="521337407061360645"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/sap.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/sap.svg") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -71,7 +71,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="707293248065896468"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="707293248065896468"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/bayrakl%C4%B1.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/bayrakl%C4%B1.svg") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -83,7 +83,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="287573336022581248"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="287573336022581248"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/hamsi.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/hamsi.svg") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
