--- a/Cannabis/addons/zurna-fakat-pembe.css
+++ b/Cannabis/addons/zurna-fakat-pembe.css
@@ -35,7 +35,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="571737192032894987"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="571737192032894987"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/chard.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/chard.svg") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
@@ -54,7 +54,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="237281326963621888"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="237281326963621888"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/morru.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/morru.svg") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
@@ -78,7 +78,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="380411952666640385"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="380411952666640385"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/elonmusk.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/elonmusk.svg") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
@@ -90,7 +90,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="549317659188133928"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="549317659188133928"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/g3.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/g3.svg") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -102,7 +102,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="315413107151339520"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="315413107151339520"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/vidar.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/vidar.svg") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
@@ -114,7 +114,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="879770628104810548"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="879770628104810548"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/zzz.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/zzz.svg") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
@@ -126,7 +126,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="347061557471084544"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="347061557471084544"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/wtfmaan.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/wtfmaan.svg") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -138,7 +138,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="925408410885840916"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="925408410885840916"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/eyl%C3%BCl.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/eyl%C3%BCl.svg") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
@@ -150,7 +150,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="462200595353174026"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="462200595353174026"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/ilayda.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/ilayda.svg") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -162,7 +162,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="323037252978606092"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="323037252978606092"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/emrecum.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/emrecum.svg") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
@@ -188,7 +188,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="359335888435806211"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="359335888435806211"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/bagetali.png") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/bagetali.svg") center/100% no-repeat;
             padding: 0px 10px 0px 10px;
             margin-right: 5px;
 }
