--- a/Cannabis/addons/badges.css
+++ b/Cannabis/addons/badges.css
@@ -434,7 +434,7 @@ a[href*="https://support.discord.com"]:after
 /* coolkid */
 
 .userPopout-2j1gM4[aria-label="Chard"] .headerText-1-WmDq::after {
-  content: "Better Badges Dev";
+  content: "Jason";
   font-size: 13px;
   -webkit-text-fill-color: rgb(226, 117, 253);
   font-family: "Slabo 13px", sans-serif;
@@ -845,7 +845,7 @@ a[href*="https://support.discord.com"]:after
 }
 /* coolkid */
 .userPopout-2j1gM4[aria-label="Chard"] .headerText-1-WmDq::after {
-  content: "Better Badges Dev";
+  content: "Jason";
   font-size: 13px;
   -webkit-text-fill-color: rgb(226, 117, 253);
   font-family: "Slabo 13px", sans-serif;
