--- a/Cannabis/addons/zurna-fakat-pembe.css
+++ b/Cannabis/addons/zurna-fakat-pembe.css
@@ -54,7 +54,7 @@ C:::::C                H:::::H     H:::::H       A:::::::::::::::::::::A       R
 [data-user-id="237281326963621888"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="237281326963621888"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://pranchard.github.io/Cannabis/assets/morru.svg") center/100% no-repeat;
+            background: url("https://pranchard.github.io/Cannabis/assets/morru.png") center/100% no-repeat;
             padding: 0px 12px 0px 12px;
             margin-right: 5px;
 }
